Update 'v9ma7qghb-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:40a22aedf74543c2d944aa0a18ed1895d655604b@sha256:e34be3b18ea52f884baee136053ec1dbc7295341179dd679c35202f54bfc705d

--- a/components/v9ma7qghb-python/overlays/development/deployment-patch.yaml
+++ b/components/v9ma7qghb-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: v9ma7qghb-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:40a22aedf74543c2d944aa0a18ed1895d655604b@sha256:e34be3b18ea52f884baee136053ec1dbc7295341179dd679c35202f54bfc705d
+          name: container-image
